NOJIRA: Fixed UI wrapping issues

--- a/src/Modules/Settings/Dnn.PersonaBar.TaskScheduler/TaskScheduler.Web/src/components/scheduler/itemHistory/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.TaskScheduler/TaskScheduler.Web/src/components/scheduler/itemHistory/style.less
@@ -69,6 +69,7 @@
         float: left;
         width: 96%;
         .historyHeader-wrapper {
+            text-transform: uppercase;
             &:not(:last-child) {
                 border-bottom: 1px solid @alto;
             }
