--- a/src/Modules/Settings/Dnn.PersonaBar.TaskScheduler/TaskScheduler.Web/src/components/scheduler/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.TaskScheduler/TaskScheduler.Web/src/components/scheduler/style.less
@@ -23,6 +23,7 @@
                     width: 100%;
                     float: left;
                     overflow: hidden;
+                    text-transform: uppercase;
                 }
                 .header-FriendlyName {
                     width: 28%;
