--- a/src/Modules/Settings/Dnn.PersonaBar.TaskScheduler/TaskScheduler.Web/src/components/topPane/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.TaskScheduler/TaskScheduler.Web/src/components/topPane/style.less
@@ -52,6 +52,7 @@
                 .topPane-middle-common-title {
                     font-weight: bolder;
                     float: left;
+                    max-width: 90%;
                 }
                 .topPane-middle-common-value {
                     float: right;
@@ -108,6 +109,7 @@
                 .topPane-right-common-title {
                     font-weight: bolder;
                     float: left;
+                    max-width: 90%;
                 }
                 .topPane-right-common-value {
                     float: right;
